// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Icon prop 1`] = `
<DocumentFragment>
  .c0.mul-info {
  position: absolute;
  top: 0;
  right: 0;
  box-sizing: border-box;
  min-width: 1rem;
  padding: 0 0.1875rem;
  color: #fff;
  font-weight: 500;
  font-size: 0.75rem;
  font-family: Avenir-Heavy,PingFang SC,Helvetica Neue,Arial, sans-serif;
  line-height: calc(1rem - 0.0625rem * 2);
  text-align: center;
  background-color: #ee0a24;
  border: 0.0625rem solid #fff;
  border-radius: 1rem;
  -webkit-transform: translate(50%,-50%);
  -ms-transform: translate(50%,-50%);
  transform: translate(50%,-50%);
  -webkit-transform-origin: 100%;
  -ms-transform-origin: 100%;
  transform-origin: 100%;
}

.c0.mul-info.mul-info--dot {
  width: 0.5rem;
  min-width: 0;
  height: 0.5rem;
  background-color: #ee0a24;
  border-radius: 100%;
}

<div
    class="c0 mul-info"
  >
    40
  </div>
</DocumentFragment>
`;

exports[`Icon prop 2`] = `<DocumentFragment />`;

exports[`Icon prop 3`] = `
<DocumentFragment>
  .c0.mul-info {
  position: absolute;
  top: 0;
  right: 0;
  box-sizing: border-box;
  min-width: 1rem;
  padding: 0 0.1875rem;
  color: #fff;
  font-weight: 500;
  font-size: 0.75rem;
  font-family: Avenir-Heavy,PingFang SC,Helvetica Neue,Arial, sans-serif;
  line-height: calc(1rem - 0.0625rem * 2);
  text-align: center;
  background-color: #ee0a24;
  border: 0.0625rem solid #fff;
  border-radius: 1rem;
  -webkit-transform: translate(50%,-50%);
  -ms-transform: translate(50%,-50%);
  transform: translate(50%,-50%);
  -webkit-transform-origin: 100%;
  -ms-transform-origin: 100%;
  transform-origin: 100%;
}

.c0.mul-info.mul-info--dot {
  width: 0.5rem;
  min-width: 0;
  height: 0.5rem;
  background-color: #ee0a24;
  border-radius: 100%;
}

<div
    class="c0 mul-info mul-info--dot"
  />
</DocumentFragment>
`;
